--- a/CMServices/Web.config
+++ b/CMServices/Web.config
@@ -9,7 +9,9 @@
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.serviceModel>
-	  <services>
+	  <bindings />
+   <client />
+   <services>
 		  <service name="CMServices.ContactService" behaviorConfiguration="mexBehaviour">
 			  <endpoint address="CMServices" binding="basicHttpBinding" contract="CMServices.IContactService" />
 			  <!--<endpoint contract="IMetadataExchange" binding="mexHttpBinding" address="mex" />-->
