--- a/ContactManagerEvolutyz.Web/Web.config
+++ b/ContactManagerEvolutyz.Web/Web.config
@@ -63,16 +63,16 @@
     <compilers>
       <!-- Compiler settings for C# -->
       <compiler language="c#;cs;csharp" extension=".cs"
-                type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider,
-                      Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0,
-                      Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+                type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider,&#xD;&#xA;                      Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0,&#xD;&#xA;                      Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+
+
                 warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
 
       <!-- Compiler settings for VB -->
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
-                type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider,
-                      Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0,
-                      Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+                type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider,&#xD;&#xA;                      Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0,&#xD;&#xA;                      Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+
+
                 warningLevel="4"
                 compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
@@ -83,19 +83,20 @@
     <bindings>
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IContactService">
-          <!-- Enable larger message size if needed -->
           <readerQuotas maxStringContentLength="8192" />
         </binding>
+        <binding name="BasicHttpBinding_IContactService1" />
       </basicHttpBinding>
     </bindings>
 
     <!-- WCF client configuration -->
     <client>
       <endpoint address="http://www.cmservices.com:70/ContactService.svc/CMServices"
-                binding="basicHttpBinding"
-                bindingConfiguration="BasicHttpBinding_IContactService"
-                contract="ContactService.IContactService"
-                name="BasicHttpBinding_IContactService" />
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IContactService"
+        contract="ContactService.IContactService" name="BasicHttpBinding_IContactService" />
+      <endpoint address="http://www.cmservices.com:70/ContactService.svc/CMServices"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IContactService1"
+        contract="ContactServices.IContactService" name="BasicHttpBinding_IContactService1" />
     </client>
   </system.serviceModel>
 </configuration>
